; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_map_expat_errors.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_map_expat_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [55 x i8] c"error occurred at line %ld, column %ld, byte index %ld\00", align 1
@xmlrpc_error_parse_unknown_encoding = common dso_local global i32 0, align 4
@xmlrpc_error_parse_bad_encoding = common dso_local global i32 0, align 4
@xmlrpc_error_parse_xml_syntax = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @map_expat_errors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @map_expat_errors(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [1024 x i8], align 16
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i32* null, i32** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = icmp ne %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %33

8:                                                ; preds = %1
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %5, i64 0, i64 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 3
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @snprintf(i8* %9, i32 1024, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %15, i32 %18)
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  switch i32 %22, label %27 [
    i32 128, label %23
    i32 129, label %25
  ]

23:                                               ; preds = %8
  %24 = load i32, i32* @xmlrpc_error_parse_unknown_encoding, align 4
  store i32 %24, i32* %4, align 4
  br label %29

25:                                               ; preds = %8
  %26 = load i32, i32* @xmlrpc_error_parse_bad_encoding, align 4
  store i32 %26, i32* %4, align 4
  br label %29

27:                                               ; preds = %8
  %28 = load i32, i32* @xmlrpc_error_parse_xml_syntax, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %27, %25, %23
  %30 = load i32, i32* %4, align 4
  %31 = getelementptr inbounds [1024 x i8], [1024 x i8]* %5, i64 0, i64 0
  %32 = call i32* @XMLRPC_UtilityCreateFault(i32 %30, i8* %31)
  store i32* %32, i32** %3, align 8
  br label %33

33:                                               ; preds = %29, %1
  %34 = load i32*, i32** %3, align 8
  ret i32* %34
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32, i32) #1

declare dso_local i32* @XMLRPC_UtilityCreateFault(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
